<resources>
    <string name="app_name">Registration App</string>
    <string name="title">Registration Form</string>
    <string name="greet">Welxome to Adventure Learning Club!</string>
    <string name="name">Full Name</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="m">Male</string>
    <string name="f">Female</string>
    <string name="id">Student ID</string>
    <string name="sch">School</string>
    <string name="email">Email</string>
    <string name="ph">Phone</string>
</resources>